# digital_breakthrough_rutube

./: .gitignore  README.md  adapter.py  index.php  publish_video.py  requirements.txt  start.sh  stop.sh
backend/: __init__.py  fastapi_app.py  pyproject.toml  task.py
backend/rabbit/: connector.py  processed_video_consumer.py  publisher.py
configs/: rabbit.env
devops/: .env  Dockerfile.adapter  Dockerfile.backend  compose.yml  convertation_compose.yml
model_convertation/: README.MD
notebooks/: infer_trt_grpc.ipynb  test_metrics.ipynb
public_html/: .htaccess  config.php  docker-compose.yml  index.php
public_html/engine/base/controllers/: RouteController.php
public_html/log/: db_log.txt  log.txt
public_html/src/: .htaccess  config.php  index.php
public_html/src/log/: log.txt
public_html/templates/default/: index.css  index.php
site/public_html/src/: index.php
src/: __init__.py
src/rabbit/: __init__.py  connector.py  consumer.py  publisher.py
src/video2x/: __init__.py  __main__.py  encoder.py  interpolator.py  pipe_printer.py  processor.py  upscaler.py  video2x.py
tensorrt_models_running/model_tensorrt/: config.pbtxt
tensorrt_models_storage/baseline_fp16_tensorrt/: config.pbtxt
tensorrt_models_storage/baseline_fp16_tensorrt/1/: model.plan
tensorrt_models_storage/finetunedx2_fp16_tensorrt/: config.pbtxt
tensorrt_models_storage/real_esrganx2_fp16_tensorrt/: config.pbtxt
tensorrt_models_storage/real_esrganx4_fp16_tensorrt/: config.pbtxt
util/: TempFile.py  TempFolder.py  __init__.py
weights/: baseline_fp16.onnx
(+26 files in other folders)
